文件<Tensorflow模型持久化>中添加滑动平均模型的模型持久化案例

--- a/Tensorflow模型持久化.ipynb
+++ b/Tensorflow模型持久化.ipynb
@@ -338,6 +338,142 @@
     "    result = tf.import_graph_def(graph_def, return_elements=['add:0'])\n",
     "    print(sess.run(result))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Tensorflow通过字典将模型保存的变量名和加载时的变量名关联起来，这样可以方便使用变量的滑动平均值。每一个变量的滑动平均值是根据影子变量维护的，所以要获取变量的滑动平均值就是要获得这个影子变量。如果在加载模型时，直接将影子变量映射到变量自身，那么在使用训练好的模型时就不需要再调用函数来获取变量的滑动平均值了。**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-1-1f45c5da42ea>:6: all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Please use tf.global_variables instead.\n",
+      "v:0\n",
+      "----------------------\n",
+      "v:0\n",
+      "v/ExponentialMovingAverage:0\n",
+      "----------------------\n",
+      "WARNING:tensorflow:From /home/g/.local/lib/python3.5/site-packages/tensorflow/python/util/tf_should_use.py:107: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n",
+      "[10.0, 0.099999905]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 需要restart kernel单独跑此段代码\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "v = tf.Variable(0, dtype=tf.float32, name='v')\n",
+    "\n",
+    "for variables in tf.all_variables():\n",
+    "    print(variables.name)\n",
+    "print('----------------------')\n",
+    "    \n",
+    "ema = tf.train.ExponentialMovingAverage(0.99)\n",
+    "maintain_average_op = ema.apply(tf.all_variables())\n",
+    "# 在生成滑动平均模型之后，Tensorflow会自动生成一个影子变量\n",
+    "for variables in tf.all_variables():\n",
+    "    print(variables.name)\n",
+    "print('----------------------')\n",
+    "\n",
+    "saver = tf.train.Saver()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    init_op = tf.initialize_all_variables()\n",
+    "    sess.run(init_op)\n",
+    "    \n",
+    "    sess.run(tf.assign(v, 10))\n",
+    "    sess.run(maintain_average_op)\n",
+    "    # 保存时会将v:0和v/ExponentialMovingAverage:0两个变量都存下来\n",
+    "    saver.save(sess, 'model/model.ckpt')\n",
+    "    print(sess.run([v, ema.average(v)]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以下代码给出了如何通过变量重命名直接读取变量的滑动平均值。**通过这个方法就可以使用完全一样的代码来计算滑动平均模型钱箱传播的结果。**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from model/model.ckpt\n",
+      "0.099999905\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = tf.Variable(0, dtype=tf.float32, name='v')\n",
+    "# 通过变量重命名将原来变量v的滑动平均值直接赋给v\n",
+    "saver = tf.train.Saver({'v/ExponentialMovingAverage':v})\n",
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, 'model/model.ckpt')\n",
+    "    print(sess.run(v))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "为了方便加载时重命名滑动平均变量，tf.train.ExponentialMovingAverage类提供了**variables_to_restore**函数来生成tf.train.Saver类所需要的变量重命名字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'v/ExponentialMovingAverage': <tf.Variable 'v:0' shape=() dtype=float32_ref>}\n",
+      "INFO:tensorflow:Restoring parameters from model/model.ckpt\n",
+      "0.099999905\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 需要restart kernel单独跑此段代码\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "v = tf.Variable(0, dtype=tf.float32, name='v')\n",
+    "ema = tf.train.ExponentialMovingAverage(0.99)\n",
+    "\n",
+    "# 通过使用variables_to_restore函数可以直接生成上面代码中提供的字典{'v/ExponentialMovingAverage':v}\n",
+    "print(ema.variables_to_restore())\n",
+    "\n",
+    "saver = tf.train.Saver(ema.variables_to_restore())\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, 'model/model.ckpt')\n",
+    "    print(sess.run(v))"
+   ]
   }
  ],
  "metadata": {
